--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "5.1",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^19.0.0",
@@ -45,7 +46,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^7.1.0",
     "tailwindcss": "^3.4.16"
   }
 }
